# ghana-speech-datagen

./: .gitignore  README.md  pyproject.toml  requirements.txt
deploy/: README.md  serve.sh  voxcpm2.yaml
examples/: ghana_speech_datagen.ipynb  modal_run.py
ghana_speech_datagen/: __init__.py  cli.py  generator.py  text_sources.py  tts_client.py  voxcpm_cpp.py
ghana_tts_datagen/: __init__.py  __main__.py  cli.py  generator.py
notebooks/: ghana_tts_datagen.ipynb
tests/: test_core.py
