[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ghana-speech-datagen"
version = "0.1.0"
description = "Generate synthetic speech training data (TTS/ASR) from text datasets against a vLLM-Omni VoxCPM2 TTS server (Ghana NLP Community VoxCPM2-Ghana) — voice-cloned speakers, incremental push, resume."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "CC-BY-4.0" }
# The datagen is a pure HTTP client of the TTS server; it needs no ML runtime.
# Deploy the model separately (see deploy/README.md) with vLLM-Omni.
dependencies = [
    "requests>=2.28",
    "datasets>=2.19",
    "huggingface_hub>=0.23",
    "soundfile>=0.12",
    "librosa>=0.10",
    "numpy",
    "scipy",
    "tqdm",
]

[project.scripts]
ghana-speech-datagen = "ghana_speech_datagen.cli:main"

[tool.setuptools]
packages = ["ghana_speech_datagen"]

[tool.setuptools.package-data]
ghana_speech_datagen = ["speakers/*.wav", "speakers/*.txt"]
